Add Gitee OAuth support
This patch adds GiteeApi and GiteeOAuthService class.

Type: New Feature